RESOLVED FIXED187953
[Web Animations] Crash when setting an animation style on an existing animation that had its effect set to null
https://bugs.webkit.org/show_bug.cgi?id=187953
Summary [Web Animations] Crash when setting an animation style on an existing animati...
Antoine Quint
Reported 2018-07-24 03:59:05 PDT
[Web Animations] Crash when setting an animation style on an existing animation that had its effect set to null
Attachments
Patch (4.56 KB, patch)
2018-07-24 04:00 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews204 for win-future (12.90 MB, application/zip)
2018-07-24 09:59 PDT, EWS Watchlist
no flags
Antoine Quint
Comment 1 2018-07-24 04:00:54 PDT
EWS Watchlist
Comment 2 2018-07-24 09:59:10 PDT
Comment on attachment 345654 [details] Patch Attachment 345654 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8639069 New failing tests: webanimations/setting-css-animation-timing-property-via-style-after-clearing-effect.html
EWS Watchlist
Comment 3 2018-07-24 09:59:21 PDT
Created attachment 345686 [details] Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Antoine Quint
Comment 4 2018-07-24 12:32:25 PDT
Radar WebKit Bug Importer
Comment 5 2018-07-24 12:34:12 PDT
Note You need to log in before you can comment on or make changes to this bug.