[Web Animations] Crash when setting an animation style on an existing animation that had its effect set to null https://bugs.webkit.org/show_bug.cgi?id=187953

Reviewed by Dean Jackson.

Source/WebCore:

Test: webanimations/setting-css-animation-timing-property-via-style-after-clearing-effect.html

Ensure that we have a valid effect before proceeding to update its timing.

* animation/CSSAnimation.cpp:
(WebCore::CSSAnimation::syncPropertiesWithBackingAnimation):

LayoutTests:

Add a new test that sets an animation property via style after setting the initial animation's effect to null.

* webanimations/setting-css-animation-timing-property-via-style-after-clearing-effect-expected.txt: Added.
* webanimations/setting-css-animation-timing-property-via-style-after-clearing-effect.html: Added.

Canonical link: https://commits.webkit.org/203141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234165 268f45cc-cd09-0410-ab3c-d52691b4dbfc